--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@ canvas {
 	</head>
 	<body>
 		<h1>Binary Operations</h1>
-
+		<!--
 		<h3>Registers</h3>
 		<p>We've seen operations like addition, where all of the logic happens at once and you see the result at the end. However, multiplication and division are more complicated, and so we need to break up the problem into several steps.</p>
 		<p>In order to do that, we need some more persistent components, something that can "remember" what it had before. That looks difficult, but we can actually implement it fairly easily with a simple trick: we take the output and wire it back into the input!</p>
@@ -28,7 +28,7 @@ canvas {
 		<p>To do multiplication and division, we're going to need some time. I've given the clock a "power" input that can be used to reset it, and arranged the output sockets horizontally.</p>
 		<div class="exploration" id="clock">
 			<h4>Clock Exploration</h4>
-		</div>
+		</div>-->
 
 		<h3>Addition &amp; Subtraction</h3>
 		<div class="exploration" id="adder">
