lots of new stuff...

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
 	<body>
 		<div class="container">
 			<h1>Arithmetic in Computer Hardware</h1>
-			<h4><a href="advanced.html">Skip right to Part 3</a> <small>(part 2 is not made yet)</small></h4>
+			<h4>
+				<a href="part2.html">Skip right to Part 2</a>
+				<a href="part3.html">Skip right to Part 3</a> <small>(part 2 is not made yet)</small>
+			</h4>
 
 			<h3>The Basics</h3>
 			<p>You're probably aware that computers store numbers as a series of 0's and 1's. These 0s and 1s are sent around in various complicated circuits to do calculations.</p>
@@ -294,7 +297,7 @@
 			-->
 
 			<h3>Making Decisions</h3>
-			<p>Another important component we will need is a <b>selector</b>. Essentially, a choice gate allows the circuit to choose between two options based on the value of a third. (If you've done any programming, you might know this as the <code>condition ? thing1 : thing2</code> operator, or <code>thing1 <strong>if</strong> condition <strong>else</strong> thing2</code> in Python.)</p>
+			<p>Another important component we will need is a <b>selector</b>. Essentially, a selector allows the circuit to choose between two options based on the value of a third. (If you've done any programming, you might know this as the <code>condition ? thing1 : thing2</code> operator, or <code>thing1 <strong>if</strong> condition <strong>else</strong> thing2</code> in Python.)</p>
 
 			<p>For our purposes, we will make selectors one bit at a time. Call the inputs A, B, and C. The logic is this:</p>
 			<ul>
@@ -309,7 +312,7 @@
 
 			<!-- TODO: Change link name? -->
 			<h3>Next Steps</h3>
-			<p>Well, this whole thing is still under construction. There's going to be a part 2 where we talk about subtraction and two's complement. But I <strong>do</strong> have a <a href="advanced.html">part 3</a> about multipliers and dividers. That might be exactly what you came here for.</p>
+			<p>Well, this whole thing is still under construction. There's going to be a part 2 where we talk about subtraction and two's complement. But I <strong>do</strong> have a <a href="part3.html">part 3</a> about multipliers and dividers. That might be exactly what you came here for.</p>
 		</div>
 		<footer>
 			Copyright &copy; 2021 Croix Gyurek. All rights reserved.
