--- a/src/multDivOnly.html
+++ b/src/multDivOnly.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="./style.css" />
-		<link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css"
+		<link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.css" />
+		<title>Multiplication and Division | Computer Hardware</title>
 	</head>
 	<body>
 		<div class="container">
@@ -28,7 +29,6 @@
 			<p>Oh, and one more thing — make sure <em>both</em> numbers are nonzero before you start!</p>
 			<div class="exploration" id="multiplier-full"></div>
 
-			<h3 id="mult-what-happened">Multiplication: What Just Happened?</h3>
 			<p>In part three of the main exploration I have a <a href="part3.html#mult-what-happened">detailed explanation</a> of this hardware.</p>
 
 			<h3>Division</h3>
@@ -41,6 +41,7 @@
 				<ul>
 					<li>Changing bits while the calculation is running... might be entertaining, because it won't restart the computation. If you want to abort it, the large red start button will be green; click it to turn the simulation off again.</li>
 				</ul>
+				<li>When the operation completes, the answer will appear on the very bottom of the canvas. The <strong>left part is the remainder</strong>, and the right part is the quotient.</li>
 				<li>Too fast? There is speed control to the right of (or below) the exploration. Click "pause" to pause the circuit and "step" to do one iteration at a time. You can also adjust the animation speed.</li>
 			</ol>
 			<p>Oh, and one more thing — make sure <em>both</em> numbers are nonzero before you start!</p>
